--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^2.26.1",
-    "gatsby-plugin-manifest": "^2.9.0",
-    "gatsby-plugin-offline": "^3.7.0",
-    "gatsby-source-filesystem": "^2.8.0",
-    "gatsby-transformer-remark": "^2.13.0",
+    "@fontsource/vollkorn": "^4.5.0",
+    "gatsby": "^3.12.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-offline": "^4.12.0",
+    "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
+    "gatsby-transformer-sharp": "^3.12.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
