--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "@fontsource/vollkorn": "^4.5.0",
+    "@fontsource/courier-prime": "^5.0.11",
     "gatsby": "^3.12.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^3.12.0",
